--- a/confirm_delete.html
+++ b/confirm_delete.html
@@ -1,17 +1,17 @@
-!DOCTYPE html
-html lang=ka
-head
-    meta charset=UTF-8
-    meta name=viewport content=width=device-width, initial-scale=1.0
-    titleპროექტის წაშლაtitle
-head
-body
-    h2დარწმუნებული ხარ, რომ გსურს პროექტის წაშლაh2
-    pპროექტი {{ project.project_name }}p
-    form method=POST
+<!DOCTYPE html>
+<html lang="ka">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>პროექტის წაშლა</title>
+</head>
+<body>
+    <h2>დარწმუნებული ხარ, რომ გსურს პროექტის წაშლა?</h2>
+    <p>პროექტი {{ project.project_name }}</p>
+    <form method="POST">
         {% csrf_token %}
-        button type=submitდიახ, წაშალეbutton
-        a href={% url 'projects' %}გაუქმებაa
-    form
-body
-html
+        <button type="submit">დიახ, წაშალე</button>
+        <a href="{% url 'projects' %}">გაუქმება</a>
+    </form>
+</body>
+</html>
